$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-22 (opened January 19, 2011)

	* prestonfit: implemented splitting "tied" counts (1, 2, 4, 8 etc)
	between octaves following Williamson & Gaston (J Anim Ecol 43,
	381-399; 2005) with argument 'tiesplit = TRUE'
	
	* specaccum: fixed typo -- 'individuals' instead of
	'invidividuals'. plot() gained argument to use "individuals" as
	x-axis instead of "sites" with method = "rarefaction".
	
Version 1.18-21 (closed January 19, 2011)

	* Fixes bug report #945 at R-Forge: anova.cca should now work with
	subset, missing data, functions of constraints (like log(x)),
	constraints or subset variables in data=, attached data frames or
	in working environments. 

	* capscale: return additive constant ('ac') when 'add = TRUE'. 

	* fitted.capscale, predict.rda: additive constant ('ac')
	subtracted from the estimated distances when 'add = TRUE' was used
	in capscale().

	* predict.rda: type = "working" for capscale returns now scaled
	scores that produce the dissimilarities as Euclidean distances --
	like was claimed in the help page.

	* simulate.capscale: implemented simulate() for capscale. This
	uses internal metric scaling mapping to simulate data and add
	error, but returns Euclidean distances adjusted to the original
	scale of input dissimilarities. The function uses only the real
	axes, and imaginary dimensions are ignored.

	* anova.cca: by = "term" and by = "axis" work now both with the
	data= statement and with variables in the GlobalEnv and subset=
	both in cca/rda. It seems that 'subset' is not implemented for
	capscale(), but otherwise models work.

	* cca/rda: added item 'subset' that is the subset argument
	evaluated to a logical vector.

	* capscale: implemented 'subset' (and this also works with
	anova.cca). It looks like all anova.cca tests pass also with
	capscale (but more thorough test will be run before closeing the
	anova.cca bug in vegan-forge). It seems that subset and na.action